// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SerialConsole in the DISCONNECTED state 1`] = `
<DocumentFragment>
  <div
    class="console-serial"
    style="grid-area: main;"
  >
    <div
      class="pf-v6-c-empty-state"
    >
      <div
        class="pf-v6-c-empty-state__content"
      >
        <div
          class="pf-v6-c-empty-state__header"
        >
          <div
            class="pf-v6-c-empty-state__title"
          >
            <h1
              class="pf-v6-c-empty-state__title-text"
            >
              My text for Disconnected
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-c-empty-state__footer"
        >
          <button
            class="pf-v6-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-1"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              My text for Connect
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SerialConsole in the LOADING state 1`] = `
<DocumentFragment>
  <div
    class="console-actions-serial"
    style="grid-area: actions-extra; display: flex; justify-content: flex-end; gap: var(--pf-t--global--spacer--sm);"
  >
    <button
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-1"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Disconnect
      </span>
    </button>
    <button
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-2"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Reset
      </span>
    </button>
  </div>
  <div
    class="console-serial"
    style="grid-area: main;"
  >
    <div
      class="pf-v6-c-empty-state"
    >
      <div
        class="pf-v6-c-empty-state__content"
      >
        <div
          class="pf-v6-c-empty-state__header"
        >
          <div
            class="pf-v6-c-empty-state__icon"
          >
            <svg
              aria-hidden="false"
              aria-label="Contents"
              aria-valuetext="Loading..."
              class="pf-v6-c-spinner pf-m-xl"
              role="progressbar"
              viewBox="0 0 100 100"
            >
              <circle
                class="pf-v6-c-spinner__path"
                cx="50"
                cy="50"
                fill="none"
                r="45"
              />
            </svg>
          </div>
          <div
            class="pf-v6-c-empty-state__title"
          >
            <h1
              class="pf-v6-c-empty-state__title-text"
            >
              My text for Loading
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SerialConsole with CONNECTED state renders 1`] = `
<DocumentFragment>
  <div
    class="console-actions-serial"
    style="grid-area: actions-extra; display: flex; justify-content: flex-end; gap: var(--pf-t--global--spacer--sm);"
  >
    <button
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-3"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        My text for Disconnect
      </span>
    </button>
    <button
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-4"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Reset
      </span>
    </button>
  </div>
  <div
    class="console-serial"
    style="grid-area: main;"
  >
    <div
      role="list"
    />
  </div>
</DocumentFragment>
`;
